# DS-WET1

./: .gitignore  Artist.cpp  Artist.h  ArtistNode.cpp  ArtistNode.h  ArtistPlays.cpp  ArtistPlays.h  CMakeLists.txt  List.cpp  List.h  MostPlayedListNode.cpp  MostPlayedListNode.h  MusicManager.cpp  MusicManager.h  README.md  Song.cpp  Song.h  SongNode.cpp  SongNode.h  SongPlays.cpp  SongPlays.h  Tree.h  TreeNode.cpp  TreeNode.h  in1.txt  library1.cpp  library1.h  main1.cpp  test.cpp
Artist/: Artist.cpp  Artist.h
ArtistPlays/: ArtistPlays.cpp  ArtistPlays.h
ArtistTree/: ArtistNode.cpp  ArtistNode.h
MostPlayedList/: ArtistPlaysByIdNode.cpp  ArtistPlaysByIdNode.h  ArtistPlaysNode.cpp  ArtistPlaysNode.h  MostPlayedListNode.cpp  MostPlayedListNode.h  SongPlaysByArtistIdNode.cpp  SongPlaysByArtistIdNode.h  SongPlaysNode.cpp  SongPlaysNode.h
Song/: Song.cpp  Song.h
SongPlays/: SongPlays.cpp  SongPlays.h
TreeNode/: AvlTree.h  Tree.h  TreeNode.cpp  TreeNode.h  TreeNode.tpp  TreeNodeImp.h
tests/: Add2ArtistsRemoveRoot.txt  in1.txt  in100adds.txt  in_check_add.txt  in_check_order_add.txt  in_check_print.txt  inadd10_100_song_incs.txt  inadd20remove10.txt  inadd_remove_invalid_input.txt  inget_rec1.txt  inget_rec2.txt  inget_rec3.txt  ininc_song.txt  innumber_of_streams_invalid.txt  out1staff.txt
